Moves logo to right and corrects small spacing and padding header links

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,73 +54,6 @@ BODY {
 .col {
     border: 1px solid black;
 }
-.will-hide, .will-hide2 {
-    display: none;
-}
-div.transbox {
-    margin: 50px;
-    background-color: #ffffff;
-    border: 1px solid black;
-    opacity:0.8;
-    filter:alpha(opacity=60); /* For IE8 and earlier */
-}
-div.transbox p {
-    margin: 10px;
-    color: #000000;
-}
-
-.dropdown-submenu {
-    position: relative;
-}
-
-.dropdown-submenu>.dropdown-menu {
-    top: 0;
-    left: 100%;
-    margin-top: -6px;
-    margin-left: -1px;
-    -webkit-border-radius: 0 3px 3px 3px;
-    -moz-border-radius: 0 3px 3px;
-    border-radius: 0 3px 3px 3px;
-}
-.dropdown-submenu:hover>.dropdown-menu {
-    display: block;
-}
-
-.dropdown-submenu>a:after {
-    display: block;
-    content: " ";
-    float: right;
-    width: 0;
-    height: 0;
-    border-color: transparent;
-    border-style: solid;
-    border-width: 5px 0 5px 5px;
-    border-left-color: #ccc;
-    margin-top: 5px;
-    margin-right: -10px;
-}
-
-.dropdown-submenu:hover>a:after {
-    border-left-color: #fff;
-}
-
-.dropdown-submenu.pull-left {
-    float: none;
-}
-
-.dropdown-submenu.pull-left>.dropdown-menu {
-    left: -100%;
-    margin-left: 10px;
-    -webkit-border-radius: 6px 0 6px 6px;
-    -moz-border-radius: 6px 0 6px 6px;
-    border-radius: 6px 0 6px 6px;
-}
-.btn-primary {
-    background-color: #3399FF;
-}
-.btn-primary:hover {
-    background-color: #5B5B5B;
-}
 
 h2 {    font-size: 50px;
     width: 700px;
